// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SELECT_PRESET should add the selected preset's dimension values to the active state 1`] = `
Immutable.Map {
  "cr": Immutable.Map {
    "contentDimensions": Immutable.Map {
      "active": Immutable.Map {
        "language": Immutable.List [
          "fr",
        ],
        "topicfocus": Immutable.List [
          "sports",
        ],
      },
      "allowedPresets": Immutable.Map {
        "language": Immutable.List [
          "en_US",
          "en_UK",
          "de",
          "fr",
        ],
      },
      "byName": Immutable.Map {
        "language": Immutable.Map {
          "label": "Language",
          "icon": "fa-language",
          "default": "en_US",
          "defaultPreset": "en_US",
          "presets": Immutable.Map {
            "en_US": Immutable.Map {
              "label": "English (US)",
              "values": Immutable.List [
                "en_US",
              ],
              "uriSegment": "en",
            },
            "en_UK": Immutable.Map {
              "label": "English (UK)",
              "values": Immutable.List [
                "en_UK",
              ],
              "uriSegment": "en-uk",
            },
            "de": Immutable.Map {
              "label": "German",
              "values": Immutable.List [
                "de",
              ],
              "uriSegment": "de",
            },
            "fr": Immutable.Map {
              "label": "French",
              "values": Immutable.List [
                "fr",
              ],
              "uriSegment": "fr",
            },
          },
        },
        "topicfocus": Immutable.Map {
          "label": "Topic focus",
          "icon": "fa-user",
          "default": "all",
          "defaultPreset": "all",
          "presets": Immutable.Map {
            "all": Immutable.Map {
              "label": "All",
              "values": Immutable.List [
                "all",
              ],
              "uriSegment": "all",
            },
            "family": Immutable.Map {
              "label": "Family",
              "values": Immutable.List [
                "family",
              ],
              "uriSegment": "family",
            },
            "sports": Immutable.Map {
              "label": "Sports",
              "values": Immutable.List [
                "sports",
              ],
              "uriSegment": "sports",
            },
            "adventure": Immutable.Map {
              "label": "Adventure",
              "values": Immutable.List [
                "adventure",
              ],
              "uriSegment": "adventure",
            },
          },
        },
      },
    },
  },
}
`;

exports[`SELECT_PRESET should overwrite the currently selected dimension values 1`] = `
Immutable.Map {
  "cr": Immutable.Map {
    "contentDimensions": Immutable.Map {
      "active": Immutable.Map {
        "language": Immutable.List [
          "en_UK",
        ],
      },
      "allowedPresets": Immutable.Map {
        "language": Immutable.List [
          "en_US",
          "en_UK",
          "de",
          "fr",
        ],
      },
      "byName": Immutable.Map {
        "language": Immutable.Map {
          "label": "Language",
          "icon": "fa-language",
          "default": "en_US",
          "defaultPreset": "en_US",
          "presets": Immutable.Map {
            "en_US": Immutable.Map {
              "label": "English (US)",
              "values": Immutable.List [
                "en_US",
              ],
              "uriSegment": "en",
            },
            "en_UK": Immutable.Map {
              "label": "English (UK)",
              "values": Immutable.List [
                "en_UK",
              ],
              "uriSegment": "en-uk",
            },
            "de": Immutable.Map {
              "label": "German",
              "values": Immutable.List [
                "de",
              ],
              "uriSegment": "de",
            },
            "fr": Immutable.Map {
              "label": "French",
              "values": Immutable.List [
                "fr",
              ],
              "uriSegment": "fr",
            },
          },
        },
        "topicfocus": Immutable.Map {
          "label": "Topic focus",
          "icon": "fa-user",
          "default": "all",
          "defaultPreset": "all",
          "presets": Immutable.Map {
            "all": Immutable.Map {
              "label": "All",
              "values": Immutable.List [
                "all",
              ],
              "uriSegment": "all",
            },
            "family": Immutable.Map {
              "label": "Family",
              "values": Immutable.List [
                "family",
              ],
              "uriSegment": "family",
            },
            "sports": Immutable.Map {
              "label": "Sports",
              "values": Immutable.List [
                "sports",
              ],
              "uriSegment": "sports",
            },
            "adventure": Immutable.Map {
              "label": "Adventure",
              "values": Immutable.List [
                "adventure",
              ],
              "uriSegment": "adventure",
            },
          },
        },
      },
    },
  },
}
`;

exports[`SET_ACTIVE should ignore dimensions that haven't been previously active 1`] = `
Immutable.Map {
  "cr": Immutable.Map {
    "contentDimensions": Immutable.Map {
      "active": Immutable.Map {
        "language": Immutable.List [
          "en_UK",
        ],
      },
      "allowedPresets": Immutable.Map {
        "language": Immutable.List [
          "en_US",
          "en_UK",
          "de",
          "fr",
        ],
      },
      "byName": Immutable.Map {
        "language": Immutable.Map {
          "label": "Language",
          "icon": "fa-language",
          "default": "en_US",
          "defaultPreset": "en_US",
          "presets": Immutable.Map {
            "en_US": Immutable.Map {
              "label": "English (US)",
              "values": Immutable.List [
                "en_US",
              ],
              "uriSegment": "en",
            },
            "en_UK": Immutable.Map {
              "label": "English (UK)",
              "values": Immutable.List [
                "en_UK",
              ],
              "uriSegment": "en-uk",
            },
            "de": Immutable.Map {
              "label": "German",
              "values": Immutable.List [
                "de",
              ],
              "uriSegment": "de",
            },
            "fr": Immutable.Map {
              "label": "French",
              "values": Immutable.List [
                "fr",
              ],
              "uriSegment": "fr",
            },
          },
        },
        "topicfocus": Immutable.Map {
          "label": "Topic focus",
          "icon": "fa-user",
          "default": "all",
          "defaultPreset": "all",
          "presets": Immutable.Map {
            "all": Immutable.Map {
              "label": "All",
              "values": Immutable.List [
                "all",
              ],
              "uriSegment": "all",
            },
            "family": Immutable.Map {
              "label": "Family",
              "values": Immutable.List [
                "family",
              ],
              "uriSegment": "family",
            },
            "sports": Immutable.Map {
              "label": "Sports",
              "values": Immutable.List [
                "sports",
              ],
              "uriSegment": "sports",
            },
            "adventure": Immutable.Map {
              "label": "Adventure",
              "values": Immutable.List [
                "adventure",
              ],
              "uriSegment": "adventure",
            },
          },
        },
      },
    },
  },
}
`;

exports[`SET_ACTIVE should overwrite the currently selected dimension values 1`] = `
Immutable.Map {
  "cr": Immutable.Map {
    "contentDimensions": Immutable.Map {
      "active": Immutable.Map {
        "language": Immutable.List [
          "en_UK",
        ],
      },
      "allowedPresets": Immutable.Map {
        "language": Immutable.List [
          "en_US",
          "en_UK",
          "de",
          "fr",
        ],
      },
      "byName": Immutable.Map {
        "language": Immutable.Map {
          "label": "Language",
          "icon": "fa-language",
          "default": "en_US",
          "defaultPreset": "en_US",
          "presets": Immutable.Map {
            "en_US": Immutable.Map {
              "label": "English (US)",
              "values": Immutable.List [
                "en_US",
              ],
              "uriSegment": "en",
            },
            "en_UK": Immutable.Map {
              "label": "English (UK)",
              "values": Immutable.List [
                "en_UK",
              ],
              "uriSegment": "en-uk",
            },
            "de": Immutable.Map {
              "label": "German",
              "values": Immutable.List [
                "de",
              ],
              "uriSegment": "de",
            },
            "fr": Immutable.Map {
              "label": "French",
              "values": Immutable.List [
                "fr",
              ],
              "uriSegment": "fr",
            },
          },
        },
        "topicfocus": Immutable.Map {
          "label": "Topic focus",
          "icon": "fa-user",
          "default": "all",
          "defaultPreset": "all",
          "presets": Immutable.Map {
            "all": Immutable.Map {
              "label": "All",
              "values": Immutable.List [
                "all",
              ],
              "uriSegment": "all",
            },
            "family": Immutable.Map {
              "label": "Family",
              "values": Immutable.List [
                "family",
              ],
              "uriSegment": "family",
            },
            "sports": Immutable.Map {
              "label": "Sports",
              "values": Immutable.List [
                "sports",
              ],
              "uriSegment": "sports",
            },
            "adventure": Immutable.Map {
              "label": "Adventure",
              "values": Immutable.List [
                "adventure",
              ],
              "uriSegment": "adventure",
            },
          },
        },
      },
    },
  },
}
`;

exports[`The reducer should create a valid initial state 1`] = `
Immutable.Map {
  "cr": Immutable.Map {
    "contentDimensions": Immutable.Map {
      "byName": Immutable.OrderedMap {
        "language": Immutable.OrderedMap {
          "label": "Language",
          "icon": "fa-language",
          "default": "en_US",
          "defaultPreset": "en_US",
          "presets": Immutable.OrderedMap {
            "en_US": Immutable.OrderedMap {
              "label": "English (US)",
              "values": Immutable.List [
                "en_US",
              ],
              "uriSegment": "en",
            },
            "en_UK": Immutable.OrderedMap {
              "label": "English (UK)",
              "values": Immutable.List [
                "en_UK",
              ],
              "uriSegment": "en-uk",
            },
            "de": Immutable.OrderedMap {
              "label": "German",
              "values": Immutable.List [
                "de",
              ],
              "uriSegment": "de",
            },
            "fr": Immutable.OrderedMap {
              "label": "French",
              "values": Immutable.List [
                "fr",
              ],
              "uriSegment": "fr",
            },
          },
        },
        "topicfocus": Immutable.OrderedMap {
          "label": "Topic focus",
          "icon": "fa-user",
          "default": "all",
          "defaultPreset": "all",
          "presets": Immutable.OrderedMap {
            "all": Immutable.OrderedMap {
              "label": "All",
              "values": Immutable.List [
                "all",
              ],
              "uriSegment": "all",
            },
            "family": Immutable.OrderedMap {
              "label": "Family",
              "values": Immutable.List [
                "family",
              ],
              "uriSegment": "family",
            },
            "sports": Immutable.OrderedMap {
              "label": "Sports",
              "values": Immutable.List [
                "sports",
              ],
              "uriSegment": "sports",
            },
            "adventure": Immutable.OrderedMap {
              "label": "Adventure",
              "values": Immutable.List [
                "adventure",
              ],
              "uriSegment": "adventure",
            },
          },
        },
      },
      "active": Immutable.OrderedMap {
        "language": Immutable.List [
          "fr",
        ],
      },
      "allowedPresets": Immutable.OrderedMap {
        "language": Immutable.List [
          "en_US",
          "en_UK",
          "de",
          "fr",
        ],
      },
    },
  },
}
`;

exports[`active selector should return the active dimension values 1`] = `
Immutable.Map {
  "language": Immutable.List [
    "fr",
  ],
}
`;

exports[`activePresets selector should return the active dimensions configuration 1`] = `
Immutable.Map {
  "language": Immutable.Map {
    "label": "French",
    "values": Immutable.List [
      "fr",
    ],
    "uriSegment": "fr",
    "name": "fr",
  },
}
`;

exports[`allowedPresets selector should return the allowed Presets 1`] = `
Immutable.Map {
  "language": Immutable.List [
    "en_US",
    "en_UK",
    "de",
    "fr",
  ],
}
`;
